fix scrollbar corner color

--- a/src/app/App.less
+++ b/src/app/App.less
@@ -31,6 +31,10 @@
         //-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
         background-color: var(--base-background-color);
     }
+
+    &-corner {
+        background-color: var(--base-background-color);
+    }
 }
 
 *:hover::-webkit-scrollbar {
